# eu-oils-bot-starter-v1.6.1

./: .gitignore  README.md  pyproject.toml  requirements-phase2.txt  retailers.bak  retailers.csv  retailers.csv.bak  selectors.json  selectors.json.bak
.github/workflows/: phase1-smoke.yml
config/: locales.yml  negatives.yml  rate_limits.yml
configs/: oil_terms.yaml  warmup_sites.yaml
dev/: apply_updates_idempotent.py  auto_fix_playbook_findings.py  fix_ah_call_only.py  step2_expand_retailer_dataclass.py
discovery/: candidates_2025-W42_BE.csv  candidates_2025-W42_NL.csv  config.yaml  proposed_registry_diff.yaml
discovery/proposed_manifests_diff/: BE.yaml  NL.yaml
finder/: __init__.py  cli.py
finder/core/: canonicalize.py  enrich.py  evidence.py  gates.py  generate_candidates.py  gtin.py  html_signals.py  reports.py  score_select.py
finder/lsi/: indexer.py  query.py
manifests/: AT.yaml  BE.yaml  BG.yaml  CY.yaml  CZ.yaml  DE.yaml  DK.yaml  EE.yaml  ES.yaml  FI.yaml  FR.yaml  GR.yaml  HR.yaml  HU.yaml  IE.yaml  IT.yaml  LT.yaml  LU.yaml  LV.yaml  MT.yaml  NL.yaml  PL.yaml  PT.yaml  RO.yaml  SE.yaml  SI.yaml  SK.yaml
my-linkedin-app/audits/: llm-compliance-checklist.json
policy/: ah_nl_last_prewarm.txt  carrefour_be_last_prewarm.txt  carrefour_be_last_unlock.txt  colruyt_be_last_prewarm.txt  jumbo_nl_last_good_listing.html  jumbo_nl_last_prewarm.txt  vomar_nl_last_good_listing.html  vomar_nl_last_prewarm.txt  vomar_nl_last_unlock.txt
retailers/: registry.yaml
src/eopt/: archives.py  cli.py  exporters_normalized.py  ids.py  net_gateway.py
(+57 files in other folders)
